--- a/demo.html
+++ b/demo.html
@@ -34,10 +34,15 @@
               <li>
                 <i class="fa-bell-o fa-question-circle-o fa-comment-o"></i>
               </li>
+                 <li> 
+                      <i class="fa-solid fa-S"></i>
+                 </li>
         </ul>
        </div> 
-
-    <section>
+   </nav>
+</section>   
+         
+         <section>
       <div>
         <h4>Good morning, Salem</h4>
         <h1>Post a task. Get it done.</h1>
@@ -173,13 +178,7 @@
           <li>Akwa ibom</li>
         </ul>
       </div>
-               </li>
-              </ul>
-            </div>
-
-
-          </nav>
-        </div>
+               
       </section>
     </body>
    </head>
