--- a/demo.html
+++ b/demo.html
@@ -27,6 +27,9 @@
                 <li>My Tasks</li>
               </ul>
             </div>
+                 
+              </nav>  
+            </div>
           </section>
 
           <div>
